testsuite/poke.pkl/sref-diag-2.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    fun f = int: { return 10; }
    int c;
  };

var n = (Foo{}).f; /* { dg-error "exist" } */
